@@ -10,7 +10,7 @@
 
 require_once(dirname(__FILE__).'/../../bootstrap/unit.php');
 
-$t = new lime_test(10);
+$t = new lime_test(14);
 
 $v = new sfValidatorChoiceMany(array('choices' => array('foo', 'bar')));
 
@@ -47,6 +47,32 @@ catch (sfValidatorError $e)
 function choice_callable()
 {
   return array(1, 2, 3);
+}
+
+// min/max options
+$v = new sfValidatorChoiceMany(array('choices' => array(0, 1, 2, 3, 4, 5), 'min' => 2, 'max' => 3));
+try
+{
+  $v->clean(array(0));
+  $t->fail('->clean() throws an sfValidatorError if the minimum number of values are not selected');
+  $t->skip('', 1);
+}
+catch (sfValidatorError $e)
+{
+  $t->pass('->clean() throws an sfValidatorError if the minimum number of values are not selected');
+  $t->is($e->getCode(), 'min', '->clean() throws a sfValidatorError');
+}
+
+try
+{
+  $v->clean(array(0, 1, 2, 3));
+  $t->fail('->clean() throws an sfValidatorError if more than the maximum number of values are selected');
+  $t->skip('', 1);
+}
+catch (sfValidatorError $e)
+{
+  $t->pass('->clean() throws an sfValidatorError if less than the minimum number of values are not selected');
+  $t->is($e->getCode(), 'max', '->clean() throws a sfValidatorError');
 }
 
 // choices as a callable
